--- a/configs.gradle
+++ b/configs.gradle
@@ -13,6 +13,6 @@ ext {
     //应用 versionCode
     versionCodeValue = 1
     //应用 version 名称，更多设置里显示的
-    versionNameValue = "1.0.0"
+    versionNameValue = "1.0.0-beta1"
 
 }
